// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows passing additional props not consumed by the component 1`] = `
<button
  class="IconButton IconButton--primary"
  data-test-id="Testing ID"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`calls an onClick function 1`] = `
<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`prevents an onClick function from being called when disabled 1`] = `
<button
  class="IconButton IconButton--disabled IconButton--primary"
  data-test-id="cf-ui-icon-button"
  disabled=""
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "muted" link type 1`] = `
<button
  class="IconButton IconButton--muted"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "negative" link type 1`] = `
<button
  class="IconButton IconButton--negative"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "positive" link type 1`] = `
<button
  class="IconButton IconButton--positive"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "primary" link type 1`] = `
<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "secondary" link type 1`] = `
<button
  class="IconButton IconButton--secondary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a link 1`] = `
<a
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  href="#"
>
  content
</a>
`;

exports[`renders the component 1`] = `
<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders the component with an additional class name 1`] = `
<button
  class="IconButton my-extra-class IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders with a dropdown indicator 1`] = `
<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="TabFocusTrap IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--primary IconButton__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
    <svg
      class="Icon Icon--small Icon--secondary IconButton__dropdown"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
      />
      <path
        d="M0-.75h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;
